k8s/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  #   - hosts:
  #       - api.test
  #     secretName: test-tls
  rules:
  - host: api.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
