k8s/ingress/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: auth
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  #   - hosts:
  #       - auth.kaizendae.com
  #     secretName: wc-kaizen-tls
  rules:
  - host: auth.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
