k8s/ingress/images-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: images-ingress
  namespace: images
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  #   - hosts:
  #       - images.kaizendae.com
  #     secretName: wc-kaizen-tls
  rules:
  - host: images.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: images-service
            port:
              number: 80
